Some netflix tunings